--- a/packages/bom_weather.yaml
+++ b/packages/bom_weather.yaml
@@ -45,6 +45,8 @@ sensor:
       - 'summary'
       - 'detailed_summary'
       - 'icon'
+      - 'uv_alert'
+      - 'fire_danger'
   - platform: template
     sensors:
       sensibo_temperature:
