--- a/packages/craftroom.yaml
+++ b/packages/craftroom.yaml
@@ -27,19 +27,11 @@ switch:
 automation:
   - alias: Craftroom - Dimmer
     trigger:
-    - entity_id: sensor.craftroom_dimmer_action
+    - entity_id: sensor.doubleswitch_click
       platform: state
     condition:
       - condition: template
-        value_template: "{{ trigger.to_state.state in ['on-press', 'up-press', 'down-press', 'off-press'] }}"
+        value_template: "{{ trigger.to_state.state in ['left','left_long','right','right_long'] }}"
     action:
     - entity_id: light.craftroom_lights
-      service: light.turn_on
-      data_template:
-        color_temp: 370
-        brightness_pct: >
-          {% if trigger.to_state.state == 'on-press' %} 100
-          {% elif trigger.to_state.state == 'up-press' %} 50
-          {% elif trigger.to_state.state == 'down-press' %} 1
-          {% elif trigger.to_state.state == 'off-press' %} 0
-          {% endif %}
+      service: light.toggle
