Ignore google calendar temp files

--- a/.gitignore
+++ b/.gitignore
@@ -26,3 +26,5 @@ www/zigbee2mqtt_networkmap/source.js
 www/images/sydneyradar.gif
 www/community/zigbee2mqtt_networkmap/source.js
 www/camera-snapshots/carport.jpg
+google_calendars.yaml
+.google.token
