--- a/packages/backroom.yaml
+++ b/packages/backroom.yaml
@@ -7,6 +7,12 @@ light:
       - light.backroom_right
       - light.backroom_left
 
+camera:
+  - platform: generic
+    name: backroom
+    still_image_url: http://192.168.86.2:6080/zm/cgi-bin/zms?mode=single&monitor=1
+    stream_source: rtsp://admin:542285@192.168.86.42/live/profile.0
+
 switch:
   - platform: template
     switches:
