--- a/packages/carport.yaml
+++ b/packages/carport.yaml
@@ -5,13 +5,14 @@ light:
       - switch.carport
 
 camera:
-  - platform: generic
+  - platform: reolink_dev
     name: entry
-    still_image_url: https://home.adebenham.com/int/motion/picture/2/current/
-    stream_source: rtsp://192.168.86.188/live/profile.0
+    host: 192.168.86.199
+    username: admin
+    password: ""
   - platform: generic
     name: carport
-    still_image_url: https://home.adebenham.com/int/motion/picture/5/current/
+    still_image_url: http://192.168.86.129/cgi-bin/snapshot.cgi?stream=0
     stream_source: rtsp://192.168.86.129/live/profile.0
 
 binary_sensor:
@@ -19,6 +20,15 @@ binary_sensor:
     state_topic: "home/carport/camera/motion"
     name: Carport Camera Motion
     device_class: motion
+  - platform: template
+    sensors:
+      motion_entry:
+        friendly_name: Camera Entry
+        device_class: motion
+        entity_id: camera.entry
+        value_template: "{{ is_state('camera.entry', 'motion') }}"
+        delay_off:
+          seconds: 30
 
 switch:
   - platform: template
@@ -36,6 +46,22 @@ switch:
           service: light.turn_off
           data:
               entity_id: light.carport_lights
+      camera_frontdoor_ir_lights:
+        value_template: "{{ is_state_attr('camera.entry', 'ir_lights_enabled', true) }}"
+        turn_on:
+          service: camera.enable_ir_lights
+          data:
+            entity_id: camera.entry
+        turn_off:
+          service: camera.disable_ir_lights
+          data:
+            entity_id: camera.entry
+        icon_template: >-
+          {% if is_state_attr('camera.entry', 'ir_lights_enabled', true) %}
+            mdi:flashlight
+          {% else %}
+            mdi:flashlight-off
+          {% endif %}
 
 automation:
   - alias: Carport - motion
