--- a/packages/carport.yaml
+++ b/packages/carport.yaml
@@ -10,10 +10,11 @@ camera:
     host: 192.168.86.199
     username: admin
     password: ""
-  - platform: generic
+  - platform: reolink_dev
     name: carport
-    still_image_url: http://192.168.86.129/cgi-bin/snapshot.cgi?stream=0
-    stream_source: rtsp://192.168.86.129/live/profile.0
+    host: 192.168.86.130
+    username: admin
+    password: ""
 
 binary_sensor:
   - platform: mqtt
@@ -27,6 +28,15 @@ binary_sensor:
         device_class: motion
         entity_id: camera.entry
         value_template: "{{ is_state('camera.entry', 'motion') }}"
+        delay_off:
+          seconds: 30
+  - platform: template
+    sensors:
+      motion_entry:
+        friendly_name: Camera Carport
+        device_class: motion
+        entity_id: camera.carport
+        value_template: "{{ is_state('camera.carport', 'motion') }}"
         delay_off:
           seconds: 30
 
@@ -46,7 +56,7 @@ switch:
           service: light.turn_off
           data:
               entity_id: light.carport_lights
-      camera_frontdoor_ir_lights:
+      camera_entry_ir_lights:
         value_template: "{{ is_state_attr('camera.entry', 'ir_lights_enabled', true) }}"
         turn_on:
           service: camera.enable_ir_lights
@@ -58,6 +68,22 @@ switch:
             entity_id: camera.entry
         icon_template: >-
           {% if is_state_attr('camera.entry', 'ir_lights_enabled', true) %}
+            mdi:flashlight
+          {% else %}
+            mdi:flashlight-off
+          {% endif %}
+      camera_carport_ir_lights:
+        value_template: "{{ is_state_attr('camera.carport', 'ir_lights_enabled', true) }}"
+        turn_on:
+          service: camera.enable_ir_lights
+          data:
+            entity_id: camera.carport
+        turn_off:
+          service: camera.disable_ir_lights
+          data:
+            entity_id: camera.carport
+        icon_template: >-
+          {% if is_state_attr('camera.carport', 'ir_lights_enabled', true) %}
             mdi:flashlight
           {% else %}
             mdi:flashlight-off
