--- a/packages/zoneminder.yaml
+++ b/packages/zoneminder.yaml
@@ -1,7 +1,9 @@
 zoneminder:
   - host: 192.168.86.2:6080
-#camera:
-#  - platform: zoneminder
+    username: !secret zoneminder_username
+    password: !secret zoneminder_password
+camera:
+  - platform: zoneminder
 sensor:
   - platform: zoneminder
     include_archived: false
