--- a/themes/midnight/midnight.yaml
+++ b/themes/midnight/midnight.yaml
@@ -21,6 +21,7 @@ midnight:
   label-badge-text-color: "var(--primary-text-color)"
   label-badge-yellow: "#f4b400"
   light-primary-color: "var(--accent-color)"
+  markdown-code-background-color: "var(--paper-listbox-background-color)"
   paper-card-background-color: "#434954"
   paper-card-header-color: "var(--accent-color)"
   paper-dialog-background-color: "#434954"
