--- a/ui-lovelace.yaml
+++ b/ui-lovelace.yaml
@@ -90,6 +90,127 @@ views:
   - user: 0b1cbeace9894723ae6b36fb5a846990
 - badges: []
   cards:
+  - entity_apparent_temp: sensor.bom_gosford_feels_like_c
+    entity_current_conditions: sensor.bom_gosford_icon_0
+    entity_current_text: sensor.bom_current_text
+    entity_daily_summary: sensor.bom_gosford_detailed_summary_0
+    entity_daytime_high: sensor.bom_today_max
+    entity_daytime_low: sensor.bom_today_min
+    entity_fire_danger: sensor.bom_fire_danger
+    entity_forecast_high_temp_1: sensor.bom_gosford_max_temp_c_1
+    entity_forecast_high_temp_2: sensor.bom_gosford_max_temp_c_2
+    entity_forecast_high_temp_3: sensor.bom_gosford_max_temp_c_3
+    entity_forecast_high_temp_4: sensor.bom_gosford_max_temp_c_4
+    entity_forecast_high_temp_5: sensor.bom_gosford_max_temp_c_5
+    entity_forecast_icon_1: sensor.bom_gosford_icon_1
+    entity_forecast_icon_2: sensor.bom_gosford_icon_2
+    entity_forecast_icon_3: sensor.bom_gosford_icon_3
+    entity_forecast_icon_4: sensor.bom_gosford_icon_4
+    entity_forecast_icon_5: sensor.bom_gosford_icon_5
+    entity_forecast_low_temp_1: sensor.bom_gosford_min_temp_c_1
+    entity_forecast_low_temp_2: sensor.bom_gosford_min_temp_c_2
+    entity_forecast_low_temp_3: sensor.bom_gosford_min_temp_c_3
+    entity_forecast_low_temp_4: sensor.bom_gosford_min_temp_c_4
+    entity_forecast_low_temp_5: sensor.bom_gosford_min_temp_c_5
+    entity_humidity: sensor.bom_gosford_relative_humidity
+    entity_pop: sensor.bom_gosford_chance_of_rain_0
+    entity_pop_1: sensor.bom_gosford_chance_of_rain_1
+    entity_pop_2: sensor.bom_gosford_chance_of_rain_2
+    entity_pop_3: sensor.bom_gosford_chance_of_rain_3
+    entity_pop_4: sensor.bom_gosford_chance_of_rain_4
+    entity_pop_5: sensor.bom_gosford_chance_of_rain_5
+    entity_pop_intensity: sensor.bom_gosford_rain_today
+    entity_pos_1: sensor.bom_gosford_possible_rainfall_1
+    entity_pos_2: sensor.bom_gosford_possible_rainfall_2
+    entity_pos_3: sensor.bom_gosford_possible_rainfall_3
+    entity_pos_4: sensor.bom_gosford_possible_rainfall_4
+    entity_pos_5: sensor.bom_gosford_possible_rainfall_5
+    entity_possible_today: sensor.bom_gosford_possible_rainfall_0
+    entity_summary_1: sensor.bom_gosford_summary_1
+    entity_summary_2: sensor.bom_gosford_summary_2
+    entity_summary_3: sensor.bom_gosford_summary_3
+    entity_summary_4: sensor.bom_gosford_summary_4
+    entity_summary_5: sensor.bom_gosford_summary_5
+    entity_sun: sun.sun
+    entity_temperature: sensor.entry_motion_sensor_temperature
+    entity_uv_alert: sensor.bom_uv_alert
+    entity_wind_bearing: sensor.bom_gosford_wind_direction
+    entity_wind_speed: sensor.bom_gosford_wind_speed_kmh
+    locale: en
+    old_daily_format: false
+    refresh_interval: 60
+    slot_l1: daytime_high
+    slot_l2: daytime_low
+    slot_l3: wind
+    slot_l4: sun_next
+    slot_r1: pop
+    slot_r2: humidity
+    slot_r3: possible_today
+    slot_r4: sun_following
+    static_icons: false
+    sunset: true
+    title: BOM Weather
+    tooltips: true
+    type: custom:bom-weather-card
+  - entity: camera.bom_radar_loop_sydney
+    type: picture-entity
+  - entities:
+    - entity: sensor.bom_gosford_air_temp_c
+      name: BOM Air Temperature
+    - entity: sensor.netatmo_outdoor_temperature
+      name: Backyard Temperature
+    - entity: sensor.carport_temperature
+      name: Carport Temperature
+    - entity: sensor.bedroom_temperature
+    - entity: sensor.backroom_sensor_temperature
+    - entity: sensor.netatmo_indoor_temperature
+      name: Livingroom Temperature
+    - entity: sensor.bedroom_temperature
+      name: Main Bedroom Temperature
+    - entity: sensor.lucas_bedroom_sensor_temperature
+    - entity: sensor.xander_bedroom_sensor_temperature
+    - entity: sensor.netatmo_outdoor_temperature
+      name: Backyard Temperature
+    - entity: sensor.office_temperature
+    hours_to_show: 72
+    refresh_interval: 0
+    type: history-graph
+  - entities:
+    - entity: sensor.netatmo_indoor_humidity
+    - entity: sensor.netatmo_outdoor_humidity
+    - entity: sensor.lucas_bedroom_sensor_humidity
+    - entity: sensor.backroom_sensor_humidity
+    - entity: sensor.xander_bedroom_sensor_humidity
+    - entity: sensor.carport_sensor_humidity
+    - entity: sensor.bathroom_humidity
+    hours_to_show: 72
+    refresh_interval: 0
+    type: history-graph
+  - entities:
+    - entity: sensor.netatmo_indoor_pressure
+      name: Living Room Pressure
+    - entity: sensor.office_pressure
+    - entity: sensor.bedroom_pressure
+    hours_to_show: 72
+    type: history-graph
+  - entities:
+    - entity: sensor.netatmo_netatmo_rainy_sum_rain_24
+    - entity: sensor.netatmo_netatmo_rainy_rain
+    hours_to_show: 48
+    refresh_interval: 0
+    type: history-graph
+  - aspect_ratio: 75%
+    type: iframe
+    url: https://embed.windy.com/embed2.html?lat=-33.907&lon=151.156&zoom=5&level=surface&overlay=wind&menu=&message=&marker=&calendar=&pressure=&type=map&location=coordinates&detail=&detailLat=-33.907&detailLon=151.156&metricWind=default&metricTemp=default&radarRange=-1https://www.home-assistant.io
+  icon: mdi:cloud
+  panel: false
+  title: Charts
+  visible:
+  - user: 78554c5a47cd465b8f4689851629b80f
+  - user: 47c95d2b4100460597954951fb807e4a
+  - user: 0b1cbeace9894723ae6b36fb5a846990
+- badges: []
+  cards:
   - entities:
     - entity: light.livingroom_lights
       name: Livingroom
@@ -269,6 +390,7 @@ views:
     - entity: switch.powerboard2_outlet_3
     - entity: switch.powerboard2_outlet_4
     - entity: script.1588132444815
+    - entity: switch.bedroom_plug_bottom
     show_header_toggle: false
     title: Switches
     type: entities
@@ -281,147 +403,20 @@ views:
   - user: 0b1cbeace9894723ae6b36fb5a846990
 - badges: []
   cards:
-  - entity_apparent_temp: sensor.bom_gosford_feels_like_c
-    entity_current_conditions: sensor.bom_gosford_icon_0
-    entity_current_text: sensor.bom_current_text
-    entity_daily_summary: sensor.bom_gosford_detailed_summary_0
-    entity_daytime_high: sensor.bom_today_max
-    entity_daytime_low: sensor.bom_today_min
-    entity_fire_danger: sensor.bom_fire_danger
-    entity_forecast_high_temp_1: sensor.bom_gosford_max_temp_c_1
-    entity_forecast_high_temp_2: sensor.bom_gosford_max_temp_c_2
-    entity_forecast_high_temp_3: sensor.bom_gosford_max_temp_c_3
-    entity_forecast_high_temp_4: sensor.bom_gosford_max_temp_c_4
-    entity_forecast_high_temp_5: sensor.bom_gosford_max_temp_c_5
-    entity_forecast_icon_1: sensor.bom_gosford_icon_1
-    entity_forecast_icon_2: sensor.bom_gosford_icon_2
-    entity_forecast_icon_3: sensor.bom_gosford_icon_3
-    entity_forecast_icon_4: sensor.bom_gosford_icon_4
-    entity_forecast_icon_5: sensor.bom_gosford_icon_5
-    entity_forecast_low_temp_1: sensor.bom_gosford_min_temp_c_1
-    entity_forecast_low_temp_2: sensor.bom_gosford_min_temp_c_2
-    entity_forecast_low_temp_3: sensor.bom_gosford_min_temp_c_3
-    entity_forecast_low_temp_4: sensor.bom_gosford_min_temp_c_4
-    entity_forecast_low_temp_5: sensor.bom_gosford_min_temp_c_5
-    entity_humidity: sensor.bom_gosford_relative_humidity
-    entity_pop: sensor.bom_gosford_chance_of_rain_0
-    entity_pop_1: sensor.bom_gosford_chance_of_rain_1
-    entity_pop_2: sensor.bom_gosford_chance_of_rain_2
-    entity_pop_3: sensor.bom_gosford_chance_of_rain_3
-    entity_pop_4: sensor.bom_gosford_chance_of_rain_4
-    entity_pop_5: sensor.bom_gosford_chance_of_rain_5
-    entity_pop_intensity: sensor.bom_gosford_rain_today
-    entity_pos_1: sensor.bom_gosford_possible_rainfall_1
-    entity_pos_2: sensor.bom_gosford_possible_rainfall_2
-    entity_pos_3: sensor.bom_gosford_possible_rainfall_3
-    entity_pos_4: sensor.bom_gosford_possible_rainfall_4
-    entity_pos_5: sensor.bom_gosford_possible_rainfall_5
-    entity_possible_today: sensor.bom_gosford_possible_rainfall_0
-    entity_summary_1: sensor.bom_gosford_summary_1
-    entity_summary_2: sensor.bom_gosford_summary_2
-    entity_summary_3: sensor.bom_gosford_summary_3
-    entity_summary_4: sensor.bom_gosford_summary_4
-    entity_summary_5: sensor.bom_gosford_summary_5
-    entity_sun: sun.sun
-    entity_temperature: sensor.entry_motion_sensor_temperature
-    entity_uv_alert: sensor.bom_uv_alert
-    entity_wind_bearing: sensor.bom_gosford_wind_direction
-    entity_wind_speed: sensor.bom_gosford_wind_speed_kmh
-    locale: en
-    old_daily_format: false
-    refresh_interval: 60
-    slot_l1: daytime_high
-    slot_l2: daytime_low
-    slot_l3: wind
-    slot_l4: sun_next
-    slot_r1: pop
-    slot_r2: humidity
-    slot_r3: possible_today
-    slot_r4: sun_following
-    static_icons: false
-    sunset: true
-    title: BOM Weather
-    tooltips: true
-    type: custom:bom-weather-card
-  - entity: camera.bom_radar_loop_sydney
-    type: picture-entity
-  - entities:
-    - entity: sensor.bom_gosford_air_temp_c
-      name: BOM Air Temperature
-    - entity: sensor.netatmo_outdoor_temperature
-      name: Backyard Temperature
-    - entity: sensor.carport_temperature
-      name: Carport Temperature
-    - entity: sensor.bedroom_temperature
-    - entity: sensor.backroom_sensor_temperature
-    - entity: sensor.netatmo_indoor_temperature
-      name: Livingroom Temperature
-    - entity: sensor.bedroom_temperature
-      name: Main Bedroom Temperature
-    - entity: sensor.lucas_bedroom_sensor_temperature
-    - entity: sensor.xander_bedroom_sensor_temperature
-    - entity: sensor.netatmo_outdoor_temperature
-      name: Backyard Temperature
-    - entity: sensor.office_temperature
-    hours_to_show: 72
-    refresh_interval: 0
-    type: history-graph
-  - entities:
-    - entity: sensor.netatmo_indoor_humidity
-    - entity: sensor.netatmo_outdoor_humidity
-    - entity: sensor.lucas_bedroom_sensor_humidity
-    - entity: sensor.backroom_sensor_humidity
-    - entity: sensor.xander_bedroom_sensor_humidity
-    - entity: sensor.carport_sensor_humidity
-    - entity: sensor.bathroom_humidity
-    hours_to_show: 72
-    refresh_interval: 0
-    type: history-graph
-  - entities:
-    - entity: sensor.netatmo_indoor_pressure
-      name: Living Room Pressure
-    - entity: sensor.office_pressure
-    - entity: sensor.bedroom_pressure
-    hours_to_show: 72
-    type: history-graph
-  - entities:
-    - entity: sensor.netatmo_netatmo_rainy_sum_rain_24
-    - entity: sensor.netatmo_netatmo_rainy_rain
-    hours_to_show: 48
-    refresh_interval: 0
-    type: history-graph
-  - aspect_ratio: 75%
-    type: iframe
-    url: https://embed.windy.com/embed2.html?lat=-33.907&lon=151.156&zoom=5&level=surface&overlay=wind&menu=&message=&marker=&calendar=&pressure=&type=map&location=coordinates&detail=&detailLat=-33.907&detailLon=151.156&metricWind=default&metricTemp=default&radarRange=-1https://www.home-assistant.io
-  icon: mdi:cloud
-  panel: false
-  title: Charts
-  visible:
-  - user: 78554c5a47cd465b8f4689851629b80f
-  - user: 47c95d2b4100460597954951fb807e4a
-  - user: 0b1cbeace9894723ae6b36fb5a846990
-- badges: []
-  cards:
-  - aspect_ratio: 60%
-    camera_image: camera.entry
-    entities:
-    - entity: binary_sensor.motion_entry
-    - entity: switch.camera_entry_ir_lights
-    image: https://demo.home-assistant.io/stub_config/kitchen.png
-    title: Entry
-    type: picture-glance
-  - aspect_ratio: 60%
-    camera_image: camera.carport
-    entities:
-    - entity: binary_sensor.motion_carport
-    - entity: switch.camera_carport_ir_lights
-    image: https://demo.home-assistant.io/stub_config/kitchen.png
+  - entity: camera.carport
+    show_name: false
+    show_state: false
     title: Carport
-    type: picture-glance
+    type: picture-entity
   - aspect_ratio: 50%
     entity: camera.livingroom
     show_name: false
     show_state: false
+    type: picture-entity
+  - entity: camera.entry
+    show_name: false
+    show_state: false
+    title: Entry
     type: picture-entity
   - aspect_ratio: 50%
     entity: camera.backroom
@@ -528,6 +523,11 @@ views:
 - badges: []
   cards:
   - entities:
+    - entity: sensor.carport_camera_motion
+    - entity: sensor.entry_camera_motion
+    title: Motion
+    type: entities
+  - entities:
     - entity: sensor.octoprint_current_state
     - entity: sensor.octoprint_job_percentage
     - entity: sensor.octoprint_time_elapsed_format
@@ -542,6 +542,7 @@ views:
     filter:
       exclude:
       - domain: device_tracker
+      - entity_id: sensor.canon_ts5000*
       include:
       - attributes:
           linkquality: < 20
