--- a/esphome/common/common.yaml
+++ b/esphome/common/common.yaml
@@ -19,12 +19,12 @@ captive_portal:
 logger:
 
 # Enable Home Assistant API
-api:
+#api:
 
 mqtt:
   broker: 192.168.86.5
   username: !secret mqtt_username
   password: !secret mqtt_password
-  discovery: false
+  #discovery: false
 
 ota:
