--- a/esphome/laundry.yaml
+++ b/esphome/laundry.yaml
@@ -1,30 +1,8 @@
-esphome:
-  name: laundry
-  platform: ESP8266
+substitutions:
+  device: laundry
   board: esp01_1m
 
-wifi:
-  ssid: !secret wifi_ssid
-  password: !secret wifi_password
-
-  # Enable fallback hotspot (captive portal) in case wifi connection fails
-  ap:
-    ssid: "Laundry Fallback Hotspot"
-    password: "mum0dGLFGrak"
-
-captive_portal:
-
-# Enable logging
-logger:
-
-# Enable Home Assistant API
-api:
-
-ota:
-
-web_server:
-  port: 80
-
+<<: !include common/common.yaml
 
 switch:
   - platform: gpio
