--- a/esphome/livingroom.yaml
+++ b/esphome/livingroom.yaml
@@ -1,19 +1,8 @@
-esphome:
-  name: livingroom
-  platform: ESP8266
+substitutions:
+  device: livingroom
   board: esp01_1m
 
-wifi:
-  ssid: !secret wifi_ssid
-  password: !secret wifi_password
-
-# Enable logging
-logger:
-
-# Enable Home Assistant API
-api:
-
-ota:
+<<: !include common/common.yaml
 
 switch:
   - platform: gpio
