Add checks to only trigger when moving from off to on (reduces false trigger on restart)

--- a/packages/backyard.yaml
+++ b/packages/backyard.yaml
@@ -16,10 +16,12 @@ automation:
       - platform: state
         entity_id: binary_sensor.backdoor_sensor_contact
         for: "0:05:00"
+        from: 'off'
         to: 'on'
       - platform: state
         entity_id: binary_sensor.back_screen_door_contact
         for: "0:05:00"
+        from: 'off'
         to: 'on'
     condition:
       condition: and
