--- a/packages/carport.yaml
+++ b/packages/carport.yaml
@@ -2,7 +2,7 @@ light:
   - platform: switch
     name: Carport Lights
     entity_id:
-      - switch.carport
+      - switch.entry_relay_1
 
 
 entity_controller:
@@ -12,8 +12,8 @@ entity_controller:
       - sensor.entry_camera_motion
     entity: light.carport_lights
     delay: 180
-    #start_time: sunset - 00:30:00
-    #end_time: sunrise + 00:30:00
+    start_time: sunset - 00:30:00
+    end_time: sunrise + 00:30:00
 
 # camera:
 #   - platform: reolink_dev
@@ -122,6 +122,7 @@ automation:
     trigger:
       - platform: state
         entity_id: sensor.entry_camera_motion
+        from: 'off'
         to: 'on'
         for: "00:03:10"
     action:
@@ -133,6 +134,7 @@ automation:
     trigger:
       - platform: state
         entity_id: binary_sensor.carport_camera_motion
+        from: 'off'
         to: 'on'
     condition: []
     action:
