--- a/packages/hall.yaml
+++ b/packages/hall.yaml
@@ -28,6 +28,7 @@ automation:
     trigger:
       platform: state
       entity_id: binary_sensor.hallway_switch2
+      from: 'off'
       to: 'on'
     condition:
       condition: time
@@ -43,6 +44,7 @@ automation:
     trigger:
       platform: state
       entity_id: binary_sensor.hallway_switch2
+      from: 'off'
       to: 'on'
     condition:
       condition: time
@@ -84,6 +86,7 @@ automation:
     trigger:
       - platform: state
         entity_id: light.xander_lights
+        from: 'off'
         to: 'on'
     #    for: 0:00:01
     condition:
@@ -105,6 +108,7 @@ automation:
     trigger:
       - platform: state
         entity_id: light.xander_lights
+        from: 'on'
         to: 'off'
     #    for: 0:00:01
     condition:
