--- a/packages/kitchen.yaml
+++ b/packages/kitchen.yaml
@@ -51,6 +51,7 @@ automation:
     trigger:
       - entity_id: binary_sensor.kitchen_switch1
         platform: state
+        from: 'off'
         to: "on"
     condition: []
     action:
@@ -63,6 +64,7 @@ automation:
     trigger:
       - entity_id: binary_sensor.kitchen_switch2
         platform: state
+        from: 'off'
         to: "on"
     condition: []
     action:
@@ -82,6 +84,7 @@ automation:
     trigger:
       - entity_id: binary_sensor.kitchen_switch3
         platform: state
+        from: 'off'
         to: "on"
     condition: []
     action:
