--- a/packages/rfremote.yaml
+++ b/packages/rfremote.yaml
@@ -53,6 +53,7 @@ automation:
     trigger:
       - entity_id: binary_sensor.rf_button_1
         platform: state
+        from: 'off'
         to: "on"
     condition: []
     action:
@@ -65,6 +66,7 @@ automation:
     trigger:
       - entity_id: binary_sensor.rf_button_2
         platform: state
+        from: 'off'
         to: "on"
     condition: []
     action:
@@ -77,6 +79,7 @@ automation:
     trigger:
       - entity_id: binary_sensor.rf_button_3
         platform: state
+        from: 'off'
         to: "on"
     condition: []
     action:
@@ -88,6 +91,7 @@ automation:
     trigger:
       - entity_id: binary_sensor.rf_button_4
         platform: state
+        from: 'off'
         to: "on"
     condition: []
     action:
@@ -99,6 +103,7 @@ automation:
     trigger:
       - entity_id: binary_sensor.rf_button_5
         platform: state
+        from: 'off'
         to: "on"
     condition: []
     action:
@@ -109,6 +114,7 @@ automation:
     trigger:
       - entity_id: binary_sensor.rf_button_6
         platform: state
+        from: 'off'
         to: "on"
     condition: []
     action:
@@ -120,6 +126,7 @@ automation:
     trigger:
       - entity_id: binary_sensor.rf_button_7
         platform: state
+        from: 'off'
         to: "on"
     condition: []
     action:
@@ -132,6 +139,7 @@ automation:
     trigger:
       - entity_id: binary_sensor.rf_button_8
         platform: state
+        from: 'off'
         to: "on"
     condition: []
     action:
